--- a/mpgrande/app/templates/app/create_request.html
+++ b/mpgrande/app/templates/app/create_request.html
@@ -14,7 +14,7 @@
 
         {% if user|has_role:'externo' or user|has_role:'interno'  %}
 
-       <center> <h2>Crear solicitud 👥</h2> </center>
+       <h2>Crear solicitud 👥</h2> 
                         
         {% endif %}
 
