--- a/mpgrande/app/templates/app/home.html
+++ b/mpgrande/app/templates/app/home.html
@@ -12,7 +12,7 @@
     <div class="container-form">
         <div class="welcome-back">
             <div class="message">
-                <h2>Bienvenid@ a su </h2> <h3>Feria Virtual</h3>
+                <h2>Bienvenid@ a su </h2> <h3>Feria Virtual</h3>s
             </div>
         </div>
     </div>
