Modificacion de templates, se agrega nueva ruta que hereda formato

--- a/mpgrande/app/templates/app/post_create_product.html
+++ b/mpgrande/app/templates/app/post_create_product.html
@@ -1,8 +1,6 @@
-{% extends 'base/base.html' %}
+{% extends 'base/sidebar.html' %}
 
-{% block titulo %}  Inventario  {% endblock titulo %}
 
-{% block portada %} Registrar Fruta {% endblock portada %}
 
 {% block content %} 
 
