--- a/mpgrande/app/templates/app/application_approve.html
+++ b/mpgrande/app/templates/app/application_approve.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'base/sidebar.html' %}
 
 {% block titulo %} Modificar solicitud  {% endblock titulo %}
 
