--- a/mpgrande/app/templates/app/create_participate_auction.html
+++ b/mpgrande/app/templates/app/create_participate_auction.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'base/sidebar.html' %}
 
 {% block titulo %} Participar en subasta  {% endblock titulo %}
 
