--- a/mpgrande/app/templates/app/list_user.html
+++ b/mpgrande/app/templates/app/list_user.html
@@ -1,4 +1,4 @@
-{% block content %} 
+{% extends 'base/sidebar.html' %}
 
 <div class="container">
     <div class="col-md-6 col-md-offset-3 form-box">
