Ajustes de urls de templates

--- a/mpgrande/app/templates/app/index.html
+++ b/mpgrande/app/templates/app/index.html
@@ -53,7 +53,7 @@
                                         <td>
                                             {% load permission_tags %}
                                             {% if p.fk_estado_solicitud.desc_estado_solicitud  == "Pendiente" and p.usuario_fk.username == user.username  or  user|has_role:'moderador'  %}
-                                            <a href="{%  url 'modificar_solicitud' p.id %}" class="btn btn-info btn-sm ">Modificar</a>
+                                            <a href="{%  url 'modify_request' p.id %}" class="btn btn-info btn-sm ">Modificar</a>
                                             {% endif %}
     
                                             <a href="#" onclick="eliminarSolicitud({{ p.id }})  " class="btn btn-danger btn-sm ">Eliminar</a>
@@ -61,11 +61,11 @@
                                             
                                             {% if  user|has_role:'moderador'  %}
     
-                                            <a href="{%  url 'modificar_estado_solicitud' p.id %}" class="btn btn-info btn-sm ">Modificar Estado</a>
+                                            <a href="{%  url 'modify_request_status' p.id %}" class="btn btn-info btn-sm ">Modificar Estado</a>
                                             {% endif %}
     
                                             {% if p.fk_estado_solicitud.desc_estado_solicitud  == "Aprobado" and user|has_role:'moderador'  %}
-                                            <a href="{%  url 'productor_crear_solicitudes' p.id %}" class="btn btn-info btn-sm ">Crear lote</a>
+                                            <a href="{%  url 'producer_create_request' p.id %}" class="btn btn-info btn-sm ">Crear lote</a>
                                             {% endif %}
                                         </td>
 
@@ -142,8 +142,8 @@
                                             {% if  p.fk_estado_productor_crear_solicitud.estado_venta  == "Pendiente"   %}
             
                                                 {% if  user|has_role:'externo' or user|has_role:'interno'   %}
-                                                <a href="{%  url 'aprobar_solicitud_cliente_productor' p.id %}" class="btn btn-info btn-sm ">Aprobarr</a>
-                                                <a href="{%  url 'rechazar_solicitud_cliente_productor' p.id %}" class="btn btn-info btn-sm ">Rechazar</a>
+                                                <a href="{%  url 'approve_producer_client_request' p.id %}" class="btn btn-info btn-sm ">Aprobarr</a>
+                                                <a href="{%  url 'reject_producer_client_request' p.id %}" class="btn btn-info btn-sm ">Rechazar</a>
                                                 {% endif %}
             
                                             {% endif %}
@@ -151,14 +151,14 @@
             
                                             {% if p.fk_solicitud.usuario_fk.username  == user.username and  p.fk_estado_productor_crear_solicitud.estado_venta  == "Aprobado"  %}
                                             <a href="#" onclick="eliminar({{ p.id }})  " class="btn btn-danger btn-sm ">Eliminar</a>
-                                            <a href="{%  url 'iniciar_subasta_participar' p.id %}" class="btn btn-info btn-sm ">Crear subasta</a>
+                                            <a href="{%  url 'start_auction_participate' p.id %}" class="btn btn-info btn-sm ">Crear subasta</a>
                                             {% endif %}
             
                                             
                                         
                                             {% if   p.fk_estado_productor_crear_solicitud.estado_venta  == "Subasta en curso"  %}
             
-                                            <a href="{%  url 'listar_subasta' p.id p.fk_solicitud.usuario_fk p.fk_solicitud %}" class="btn btn-info btn-sm ">Ver subasta</a>
+                                            <a href="{%  url 'list_auction' p.id p.fk_solicitud.usuario_fk p.fk_solicitud %}" class="btn btn-info btn-sm ">Ver subasta</a>
                                             
                                             {% endif %}
             
