--- a/mpgrande/app/templates/app/post_create_product.html
+++ b/mpgrande/app/templates/app/post_create_product.html
@@ -38,7 +38,7 @@
             
                     }).then(function(result) {
                         if (result.isConfirmed) {
-                        window.location.href = "/eliminar_post_producto/"+id+"/"
+                        window.location.href = "/delete_post_product/"+id+"/"
                     }
                     })
             
