--- a/mpgrande/app/templates/registration/login.html
+++ b/mpgrande/app/templates/registration/login.html
@@ -14,7 +14,7 @@
         <form method="post" class=" formulario contenedor input-contenedor">
             <h1>Bienvenid@,<br> inicia tu sesión.</h1>
             {% csrf_token %}
-            {{form.as_p | crispy}}
+            {{form.as_bootstrap | crispy}}
             <input type="submit" value="Ingresar" class="button"> 
             <p>¿No tienes una cuenta? <a class="link" href="{% url 'register' %}">Registrate </a></p> 
             <a class="link" href="{% url 'home' %}">Ir al inicio </a></p> 
